@@ -523,7 +523,8 @@ typedef struct _DownloadList {
 
 #define FONTSTAT_SIZE 4
 
-#define INIT_BUFFER_WIDTH (COLS - (showLineNum ? 6 : 1))
+#define _INIT_BUFFER_WIDTH (COLS - (showLineNum ? 6 : 1))
+#define INIT_BUFFER_WIDTH ((_INIT_BUFFER_WIDTH > 0) ? _INIT_BUFFER_WIDTH : 0)
 #define FOLD_BUFFER_WIDTH (FoldLine ? (INIT_BUFFER_WIDTH + 1) : -1)
 
 typedef struct {
