@@ -1,5 +1,12 @@
 2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03714] -cols 1 -dump -o fold_line=1
+	* file.c (addnewline): check i == 0, i == l->len
+	* fm.h (_INIT_BUFFER_WIDTH): added
+		(INIT_BUFFER_WIDTH): use _INIT_BUFFER_WIDTH
+
+2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03713] search with "$"
 	* search.c (forwardSearch): check l->next && l->next->bpos
 		(backwardSearch): check l->size, l->next && l->next->bpos
